--- a/blog/templates/account/details.html
+++ b/blog/templates/account/details.html
@@ -42,7 +42,7 @@
                                     Delete Post 
                   </a>
             {% endif %}
-{% endif %}
+ views: {{ visitor_counter }}{{post.total_visitors}}.{% endif %}
 <h5>{{post.total_views}}</h5>
   <p class="date">
     Published {{ post.publish }} by {{ post.author }}
