--- a/blog/templates/account/details.html
+++ b/blog/templates/account/details.html
@@ -6,7 +6,6 @@
 {% block content %}
 {% if message%}
 <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
-
 <script>
     Swal.fire({
         position: 'top-end',
@@ -15,63 +14,174 @@
         showConfirmButton: false,
         timer: 1500
       })
-    </script>
+</script>
 {% endif %}
+<style>
+.sav{
+    float:right;
+}
+.sav-edit{
+    float:right;
+    padding-right:10px;
+
+}
+.sav-delete{
+    float:right;
+    padding-right:10px;
+
+}
+.sh-blog-single-mete{
+    border-top: 1px solid #eaeaea;
+    border-bottom: 1px solid #eaeaea;
+    padding: 26px 0 24px;
+    margin: 0;
+}
+.kl {
+    width: inherit;
+    height: inherit;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+}
+
+/* Modal Content (Image) */
+.modal-content {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+}
+
+/* Caption of Modal Image (Image Text) - Same Width as the Image */
+#caption {
+  margin: auto;
+  display: block;
+  width: 80%;
+  max-width: 700px;
+  text-align: center;
+  color: #ccc;
+  padding: 10px 0;
+  height: 150px;
+}
+
+/* Add Animation - Zoom in the Modal */
+.modal-content, #caption {
+  animation-name: zoom;
+  animation-duration: 0.6s;
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+/* The Close Button */
+.close {
+  position: absolute;
+  top: 15px;
+  right: 35px;
+  color: #f1f1f1;
+  font-size: 40px;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+.close:hover,
+.close:focus {
+  color: #bbb;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* 100% Image Width on Smaller Screens */
+@media only screen and (max-width: 700px){
+  .modal-content {
+    width: 100%;
+  }
+}
+
+
+</style>
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 {% comment %} side bar {% endcomment %}
     {% include 'account/sidebar.html'%}
 {% comment %} end side bar {% endcomment %}
 <div id="content" class="p-4 p-md-5 pt-5">
+<!-- Page Content -->
+  <div class="container">
 
-<h1>{{ post.title }}</h1>
-{% comment %} edit {% endcomment %}
-{% if user.is_authenticated%}
-{% comment %} -------------watch later-------------------------- {% endcomment %}
-    <form action="/posts/watchlater" method="POST">{% csrf_token %}
+    <div class="row">
+
+      <!-- Post Content Column -->
+      <div class="col-lg-8">
+
+        <!-- Title -->
+        <h1 class="mt-4">{{post.title}}
+        <form action="/posts/watchlater" method="POST" class="sav">{% csrf_token %}
             <input type="hidden" name="post_id" value="{{post.id}}">
-            <button type="submit" class="btn btn-outline-danger" id="submit_btn">
-            <i class="icon-save"></i> Save Post
+            <button type="submit" class="btn btn-outline-danger" id="submit_btn" data-original-title="Save">
+            <i class="material-icons"></i> 
            </button>
-     </form>
-  {% comment %} ----------end watch later-------------------------- {% endcomment %}
-  
-            {% if user.id == post.author.id %}
-                  <a href="{% url 'posts:update_post' post.pk %}">
-                                    Edit Post 
+        </form>
+        
+        {% if user.id == post.author.id %}
+                  <a href="{% url 'posts:update_post' post.pk %}" class="edit sav-edit" title="" data-toggle="tooltip" data-original-title="Edit">
+                                    <i class="material-icons"></i>
                   </a>
-                  <a href="{% url 'posts:delete_post' post.pk %}">
-                                    Delete Post 
+                  <a href="{% url 'posts:delete_post' post.pk %}" class="delete sav-delete" title="" data-toggle="tooltip" data-original-title="Delete">
+                                    <i class="material-icons"></i>
                   </a>
-            {% endif %}
- views: {{ visitor_counter }}{{post.total_visitors}}.{% endif %}
-<h5>{{post.total_views}}</h5>
-  <p class="date">
-    Published {{ post.publish }} by {{ post.author }}
-  </p>
-  {{ post.body|markdown }}
-  <br>
-  {% comment %} likes --------------------- {% endcomment %}
-    <div style="text-align:center;" class="mt-4">
-                <button class="btn btn-outline-danger"
-                        type="button"
-                        onclick="validate_is_like(
-                                '{% url 'posts:increase_likes' post.id %}',
-                                {{ post.id }},
-                                {{ post.likes }}
-                            )"
-                >
-                    <span>likes</span>
-                    <span>
-                        <i class="fas fa-heart"></i>
-                    </span>
-                    <span id="likes_number">
-                        {{ post.likes }}
-                    </span>
-                </button>
-            </div>
-            {% comment %} likes --------- {% endcomment %}
-            <br>
-            {% comment %} like and dislike----------- {% endcomment %}
-            <div class="mt-4">
+        {% endif %}
+        </h1>
+        <!-- Author -->
+        <p class="lead">
+          by
+          <a href="#">{{ post.author }}</a>
+        </p>
+
+        <hr>
+
+        <!-- Date/Time -->
+        <p>Published {{ post.publish }}</p>
+
+        <hr>
+
+        <!-- Preview Image -->
+        <img class="img-fluid rounded kl" id="myImg" src="{{post.avatar.url}}" alt="">
+        {% comment %}  {% endcomment %}
+        <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- The Close Button -->
+  <span class="close">&times;</span>
+
+  <!-- Modal Content (The Image) -->
+  <img class="modal-content" id="img01">
+
+  <!-- Modal Caption (Image Text) -->
+  <div id="caption"></div>
+</div>
+        {% comment %}  {% endcomment %}
+        <hr>
+
+        <!-- Post Content -->
+        <p class="lead">{{ post.body|markdown }}</p>
+
+        <hr>
+        <div class="row">
+            <div class="col-lg-6">
                 <form action="{% url 'posts:like_post' post.pk %}" method="POST">{% csrf_token %}
                 {% if liked %}
                     <button type="submit" name="post_id" value="{{post.id}}" class="btn btn-danger btm-sm">Unlike 
@@ -82,8 +192,10 @@
                 {% endif %}
                     Likes {{total_likes}}
                 </form>
-                {% comment %}---------- end like ------ {% endcomment %}
-                <form action="{% url 'posts:dislike_post' post.pk %}" method="POST">
+
+            </div>
+            <div class="col-lg-6">
+                         <form action="{% url 'posts:dislike_post' post.pk %}" method="POST">
                 {% csrf_token %}
                 {% if disliked %}
                     <button type="submit" name="post_id" value="{{post.id}}" class="btn btn-danger btm-sm">UnDislike 
@@ -95,106 +207,73 @@
                     DisLikes {{total_dislikes}}
                 </form>
             </div>
-            {% comment %} end ------like dislike--------- {% endcomment %}
-  <p>
-    <a href="{% url "posts:post_share" post.id %}">
-      Share this post
-    </a>
-  </p>
-  <p>
-  <a href="{% url 'posts:category' post.category %}">
-    {{ post.category }}
-  </a>
-  </p>
-  {% comment %} tags {% endcomment %}
-  {% comment %} <p class="tags">
-      Tags:
-      {% for tag in post.tags.all %}
-        <a href="{% url "posts:post_list_by_tag" tag.slug %}">
-          {{ tag.name }}
-        </a>
-        {% if not forloop.last %}, {% endif %}
-      {% endfor %}
-    </p> {% endcomment %}
-    
-  {% comment %} end tags {% endcomment %}
-  <h2>Similar posts</h2>
-  {% for post in similar_posts %}
-    <p>
-      <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
-    </p>
-  {% empty %}
-    There are no similar posts yet.
-  {% endfor %}
-  {% comment %} -----------prev next --------- {% endcomment %}
-  <br>
-            <div class="row justify-content-end">
-                {% if next_article %}
-                <div class="col-auto mr-auto">
+        </div>
+        
+        <hr>
+        
+
+        <div class="row">
+                <div class="col-lg-6">
+                    {% if next_article %}
+                    <div class="col-auto mr-auto">
                     <a  href="{{ next_article.get_absolute_url }}" 
                         class="btn btn-info"
                         >
                         {{ next_article.title }}
                     </a>
+                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
-            {% if pre_article %}
-                <div class="col-auto">
-                    <a  href="{{ pre_article.get_absolute_url }}" 
-                    class="btn btn-info" 
-                    >
+                <div class="col-lg-6">
+                    {% if pre_article %}
+                     <div class="col-auto">
+                        <a  href="{{ pre_article.get_absolute_url }}" 
+                              class="btn btn-info" 
+                         >
                         {{ pre_article.title }}
-                    </a>
+                       </a>
+                     </div>
+                    {% endif %}
                 </div>
-            {% endif %}
             </div>
-        {% comment %} -------end prev next -------------- {% endcomment %}
-  
-<!-- Comment with nested comments -->
-<!-- Comment -->
-<hr>
-{% if user.is_authenticated %}
- <div>
-    <form action="{% url 'posts:post_comment' post.id %}" method="POST">
-        {{ post_form.media }}
-        {% csrf_token %}
-        {% comment %} <div class="form-group">
-         <label for="body">
-          <strong>Comments：</strong>
-         </label>
-         <textarea type="text" class="form-control" id="body" name="body" rows="100"></textarea>
-        </div> {% endcomment %}                       
-         <div class="form-group">
+
+        <!-- Comments Form -->
+        {% if user.is_authenticated %}
+        <div class="card my-4">
+          <h5 class="card-header">Leave a Comment:</h5>
+          <div class="card-body">
+                    <form action="{% url 'posts:post_comment' post.id %}" method="POST">
+                         {{ post_form.media }}
+                         {% csrf_token %}
+                        <div class="form-group">
                             <label for="body">
-                                <strong>
-                                    Comments:
-                                </strong>
                             </label>
                             <br>
-                            <div>
+                        <div>
                                 {{ comment_form.media }}
                                 {{ comment_form.body }}
-                            </div>
                         </div>
-        <!-- Submit button -->
-        <button type="submit" class="btn btn-primary ">send</button>                    
-    </form>
-</div>
-<br>
-{% else %}
-<br>
-<h5 class="row justify-content-center">
-     please<a href="{% url 'account:login' %}">log in</a>Reply later
-</h5><br>
-{% endif %}
-            
+                        </div>
+                        <!-- Submit button -->
+                        <button type="submit" class="btn btn-primary ">send</button>                    
+                    </form>
+          </div>
+        </div>
+        {% else %}
+        <br>
+        <h5 class="row justify-content-center">
+               please<a href="{% url 'account:login' %}">log in</a>Reply later
+        </h5><br>
+        {% endif %}
 
-<!---------------------------------->
-<!-- Show comments -->
-{% load mptt_tags %}
-  <h4>Share {{ comments.count }} Comments</h4>
-    <div class="row">
-    <!-- Traverse the tree structure -->
+        <!-- Single Comment -->
+    <!-- Show comments -->
+   {% load mptt_tags %}
+   <h4>Share {{ comments.count }} Comments</h4>
+        
+        <div class="media mb-4">
+          <div class="media-body">
+                                    <!-- Traverse the tree structure -->
      {% recursetree comments %}
         {% with comment=node %}
           <div class="{% if comment.reply_to %}offset-1 col-11
@@ -236,9 +315,112 @@
     {% if not comment.is_leaf_node %}
      <div class="children">{{ children }}</div>
     {% endif %}
-</div>
-{% endwith %}
-{% endrecursetree %}
+    </div>
+    {% endwith %}
+    {% endrecursetree %}
+
+            
+
+            
+
+          </div>
+        </div>
+
+      </div>
+
+      <!-- Sidebar Widgets Column -->
+      <div class="col-md-4">
+      {% comment %} share post {% endcomment %}
+      <div class="card my-4">
+          <h5 class="card-header">Share posts</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                        <a href="{% url "posts:post_share" post.id %}">
+                                    Share this post
+                    </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        {% comment %} category {% endcomment %}
+        <div class="card my-4">
+          <h5 class="card-header">Category</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                  <a href="{% url 'posts:category' post.category %}"> {{ post.category }} </a>
+              </div>
+            </div>
+          </div>
+        </div>
+    
+  
+        <!-- Categories Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Similar posts</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  {% for post in similar_posts %}
+                  <li>
+                    <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
+                  </li>
+                  {% empty %}
+                  <li>
+                    There are no similar posts yet.
+                </li>
+                  {% endfor %}
+                </ul>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+
+        <!-- Side Widget -->
+        <div class="card my-4">
+          <h5 class="card-header">Like Dislike Views</h5>
+          <div class="card-body">
+            <div class="row">
+              <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                  <li>
+                    Likes:{{total_likes}}
+                  </li>
+                  <li>
+                    DisLikes:{{total_dislikes}}
+                  </li>
+                  <li>
+                    Views: {{post.total_views}}
+                  </li>
+                </ul>
+                </div>
+                <div class="col-lg-6">
+                <ul class="list-unstyled mb-0">
+                    <li>
+                        Unique Visitor:{{post.total_visitors}}
+                    </li>
+                    <li>
+                    
+                        {{visitor_counter}}
+                    
+                    </li>
+                </ul>
+                </div>
+            
+          </div>
+        </div>
+
+      </div>
+
+    </div>
+    <!-- /.row -->
+
+  </div>
+  <!-- /.container -->
+
 </div>  
 </div>
 <script>
@@ -317,6 +499,33 @@ function post_reply_and_show_it(new_comment_id) {
         // Refresh and position to anchor
         window.location.replace(next_url + "#comment_elem_" + new_comment_id);
     };
+
+
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the image and insert it inside the modal - use its "alt" text as a caption
+var img = document.getElementById("myImg");
+var modalImg = document.getElementById("img01");
+var captionText = document.getElementById("caption");
+img.onclick = function(){
+  modal.style.display = "block";
+  modalImg.src = this.src;
+  captionText.innerHTML = this.alt;
+}
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+
+
+
+
 </script>
 {% comment %} <script src="{% static 'ckeditor/ckeditor/plugins/prism/lib/prism/prism_patched.min.js' %}"></script>  {% endcomment %}
 {% comment %} <link rel="stylesheet" href="{% static 'prism/prism.css' %}"> {% endcomment %}
