--- a/blog/templates/account/register.html
+++ b/blog/templates/account/register.html
@@ -4,14 +4,6 @@
 
 {% block content %}
 <div id="content" class="p-4 p-md-5 pt-5">
-
-  <h1>Create an account</h1>
-  <p>Please, sign up using the following form:</p>
-  {% comment %} <form method="post">
-    {{ user_form.as_p }}
-    {% csrf_token %}
-    <p><input type="submit" value="Create my account"></p>
-  </form> {% endcomment %}
   <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
@@ -19,7 +11,7 @@
 
 
       <div class="card-body">
-        <div class="card-title py-3">
+        <div class="card-title py-6">
           <h4>Register for a free account</h4>
         </div>
         <form action="{% url 'register' %}" method="post">
@@ -54,21 +46,25 @@
           <div class="emailFeedBackArea invalid-feedback" style="display:none">
           </div>
           <div class="form-group">
-            <input
+            <div class="input-group mb-3">
+              <input
               type="password"
               name="password"
               placeholder="Password"
               class="form-control form-control-sm"
               id="password"
               onchange='check_pass()';
-            />
-            <small class="float-right py-3 showPasswordToggle">
-            <input type="checkbox" onclick="myFunction()">Show Password</small>
+              />
+            <div class="input-group-append">
+               <small class="float-right py-3 showPasswordToggle">
+                <input type="checkbox" onclick="myFunction()">Show</small>
+            </div>
+           </div>
 
-            </small>
           </div>
           <div class="form-group">
-          <label>Confirm Password:
+           <div class="input-group mb-3">
+
             <input
               type="password"
               name="confirm_password"
@@ -77,11 +73,12 @@
               class="form-control form-control-sm"
               onchange='check_pass()';  
                         />
-          
+              <div class="input-group-append">
             <span id='message'></span>
-            </label>
             <small class="float-right py-3 showPasswordToggle">
-            <input type="checkbox" onclick="myFunction1()">Show Password</small>
+            <input type="checkbox" onclick="myFunction1()">Show </small>
+            </div>
+           </div>
           </div>
           <input type="submit" value="Register" class="btn btn-block btn-primary submit-btn" id="submit" />
         </form>
