--- a/blog/templates/account/followers.html
+++ b/blog/templates/account/followers.html
@@ -1,8 +1,74 @@
 {% load thumbnail %}
-<ul>
+{% load static %}
+<link href="{% static "css/follow-block.css" %}" rel="stylesheet">
     {% for f in followers %}
-    <li><a href="{% url 'posts:user_detail' f.username %}">{{ f.first_name }} {{ f.last_name }}</a>
-    <img src="{% thumbnail f.profile.photo 180x180 %}" class="user-detail">
-    </li>
+    <section class="search-result-item">
+            <a class="image-link" href="#"><img class="image" src="{% thumbnail f.profile.photo 180x180 %}">
+            </a>
+            <div class="search-result-item-body">
+                <div class="row">
+                    <div class="col-sm-9">
+                        <h4 class="search-result-item-heading"><a href="{% url 'posts:user_detail' f.username %}">{{ f.first_name }} {{ f.last_name }}</a></h4>
+                        <h4 class="info">@{{f.username}}</h4>
+                        <p class="description">{{user.profile.bio}}</p>
+                    </div>
+                    <div class="col-sm-3 text-align-center">
+                        {% comment %} <p class="value3 mt-sm">$2, 400</p>
+                        <p class="fs-mini text-muted">PER MONTH</p> {% endcomment %}
+                        <a class=" follow btn btn-info btn-sm" href="{% url 'posts:user_follow' %}"
+                        data-id="{{ f.id }}" data-action="{% if f.username in f.followers.all %}un{% endif %}follow">
+                        {% comment %} <p>hii{{f.followers.all}}<p> {% endcomment %}
+                        {% if f.username not in f.followers.all %}
+                                  Follow
+                        {% else %}
+                                  Unfollow
+                        {% endif %}
+                        
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
     {% endfor %} 
-</ul> 
+
+<script>
+$('a.follow').click(function(e){
+    e.preventDefault();
+    $.post('{% url "posts:user_follow" %}',
+      {
+        id: $(this).data('id'),
+        action: $(this).data('action')
+        
+      },
+      function(data){
+        if (data['status'] == 'ok') {
+          var previous_action = $('a.follow').data('action');
+
+          // toggle data-action
+          $('a.follow').data('action',
+            previous_action == 'follow' ? 'unfollow' : 'follow');
+          // toggle link text
+          $('a.follow').text(
+            previous_action == 'follow' ? 'Unfollow' : 'Follow');
+
+          // update total followers
+          var previous_followers = parseInt(
+            $('span.counts .total').text());
+          $('span.counts .total').text(previous_action == 'follow' ?
+          previous_followers + 1 : previous_followers - 1);
+
+        //update total following
+        var previous_following = parseInt(
+            $('span.count1 .total1').text());
+          $('span.count1 .total1').text(previous_action == 'follow' ?
+          previous_following + 1 : previous_following - 1);
+
+        }
+          {% comment %} var div = document.getElementById('jsondata');
+          div.innerHTML = div.innerHTML + data.message; {% endcomment %}
+          alert(data.message)
+      }
+    );
+  });
+</script>
+
