--- a/blog/templates/account/following_list.html
+++ b/blog/templates/account/following_list.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load static %}
+<link href="{% static "css/follow-block.css" %}" rel="stylesheet">
 {% block title %}Following{% endblock %}
 {% block content %}
 {% comment %} side bar {% endcomment %}
@@ -7,7 +9,13 @@
 <div id="content" class="p-4 p-md-5 pt-5">
 {% load frienshiptag %}
 <h1>Following</h1>
+<div class="container">
+  <div class="row ng-scope">   
+    <div class="col-md-9 col-md-pull-3">
 {% get_by_name friendship_context_object_name as var %}
 {% following var %}
+</div>
+</div>
+</div>
 </div>
 {% endblock %}
