--- a/blog/static/css/style.css
+++ b/blog/static/css/style.css
@@ -297,7 +297,7 @@ figure {
   font-weight: 400;
   font-family: Poppins; } */
 
-.con {
+/* .con {
   width: 900px;
   background: #fff;
   margin: 0 auto;
@@ -322,7 +322,7 @@ figure {
   -moz-align-items: center;
   -webkit-align-items: center;
   -o-align-items: center;
-  -ms-align-items: center; }
+  -ms-align-items: center; } */
 
 .display-flex-center {
   justify-content: center;
