--- a/blog/templates/account/register.html
+++ b/blog/templates/account/register.html
@@ -19,6 +19,12 @@
 
           {% include 'partials/_messages.html' %}
           <div class="form-group">
+            <input type="text" name="first_name" placeholder="FirstName"  class="form-control form-control-sm"/>
+          </div>
+          <div class="form-group">
+            <input type="text" name="last_name" placeholder="LastName"  class="form-control form-control-sm"/>
+          </div>
+          <div class="form-group">
             <input
               type="text"
               name="username"
