--- a/blog/templates/account/watchlater.html
+++ b/blog/templates/account/watchlater.html
@@ -49,7 +49,7 @@
           
           </p>
         <p class="card-text">Posts: {{i.title}}</p>
-          <a href="/posts/{{i.id}}"><button class="btn btn-outline-danger">Watch Post</button></a>
+          <a href="/posts/details/{{i.id}}"><button class="btn btn-outline-danger">Watch Post</button></a>
           
         </div>
       </div>
