update post change ajax

--- a/blog/templates/account/footer.html
+++ b/blog/templates/account/footer.html
@@ -1,6 +1,7 @@
 {% load blog_tags %}
 <!-- Footer -->
-<footer class="page-footer font-small unique-color-dark">
+
+<footer class="page-footer font-small unique-color-dark footer-expand-md">
 
   <div style="background-color: #866ec7;">
     <div class="container">
