--- a/blog/templates/account/update_comment.html
+++ b/blog/templates/account/update_comment.html
@@ -5,8 +5,9 @@
 {% block content %}
 <h2>Edit Comment</h2>
 <form method="post">
-    {% csrf_token %} // to protect the form
-    {{ form.as_p }} // to render form
+    {{ form.media }}
+    {% csrf_token %} 
+    {{ form.as_p }} 
     <button type="submit" name="button">Submit</button>
 </form>
 
